# Hive-The-Game

./: Board.cpp  Board.hpp  Board2.cpp  CMakeLists-teaching.txt  CMakeLists.txt  Engine.cpp  Engine.hpp  Hex.hpp  Hive.cpp  Hive.hpp  LICENSE  Makefile  Player.cpp  Player.hpp  Queen.cpp  Queen.hpp  Tile.hpp  board.cpp  board_old.cpp  main.cpp  noteforcmake.txt  rules.cpp  rules.txt  test.cpp
